[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusutils"
dynamic = ["version"]
authors = [
    { name = "The NOMAD Authors" },
]
description = "Extend NeXus for materials science experiment and serve as a NOMAD parser implementation for NeXus."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8,<3.11"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=7.1.2",
    "h5py>=3.6.0",
    "xarray>=0.20.2",
    "PyYAML>=6.0",
    "numpy>=1.21.2",
    "pandas>=1.3.2",
    "ase>=3.19.0",
    "flatdict>=4.0.1",
    "hyperspy>=1.7.3",
    "jupyterlab>=3.5.2",
    "jupyterlab_h5web>=6.6.1",
    "hdfdict @ git+https://github.com/shabihsherjeel/hdfdict@f48a586",
    "ifes_apt_tc_data_modeling>=0.0.5",
    "gitpython>=3.1.24",
    "pytz>=2021.1",
    "scipy>=1.7.3",
    "lark>=1.1.5",
    "requests",
    "requests_cache",
]

#     "h5web @ git+https://github.com/silx-kit/h5web@3e21159",

[project.urls]
"Homepage" = "https://github.com/nomad-coe/nomad-parser-nexus"
"Bug Tracker" = "https://github.com/nomad-coe/nomad-parser-nexus/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "pycodestyle",
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "structlog",
    "types-pyyaml",
    "types-pytz",
    "types-requests",
]

[project.scripts]
read_nexus = "nexusutils.nexus.nexus:main"
dataconverter = "nexusutils.dataconverter.convert:convert_cli"
nyaml2nxdl = "nexusutils.nyaml2nxdl.nyaml2nxdl:launch_tool"

[tool.setuptools.package-data]
nexusutils = ["definitions/**/*.xml", "definitions/**/*.xsd"]
"nexusutils.dataconverter.readers.xps" = ["*.json"]
"nexusutils.dataconverter.readers.hall" = ["enum_map.json"]
"nexusutils.dataconverter.readers.rii_database.formula_parser" = ["dispersion_function_grammar.lark"]

[tool.setuptools.packages.find]
exclude = ["nexusutils/definitions*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"