[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
backend-path = ["pynxtools"]
build-backend = "_build_wrapper"

[project]
name = "pynxtools"
dynamic = ["version"]
authors = [
    { name = "The NOMAD Authors" },
]
description = "Extend NeXus for materials science experiment and serve as a NOMAD parser implementation for NeXus."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.11"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=7.1.2",
    "h5py>=3.6.0",
    "xarray>=0.20.2",
    "PyYAML>=6.0",
    "numpy>=1.21.2",
    "pandas>=1.3.2",
    "ase>=3.19.0",
    "flatdict>=4.0.1",
    "hyperspy>=1.7.4",
    "ifes_apt_tc_data_modeling>=0.0.9",
    "gitpython>=3.1.24",
    "pytz>=2021.1",
    "kikuchipy>=0.8.2",
    "pyxem>=0.14.2",
    "zipfile37==0.1.3",
    "nionswift==0.16.8",
    "tzlocal<=4.3",
    "scipy>=1.7.1",
    "lark>=1.1.5",
    "requests",
    "requests_cache",
    "mergedeep"
]

[options]
install_requires = "importlib-metadata ; python_version < '3.10'"

[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/pynxtools"
"Bug Tracker" = "https://github.com/FAIRmat-NFDI/pynxtools/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "pycodestyle",
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "structlog",
    "types-pyyaml",
    "types-pytz",
    "types-requests",
    "pip-tools",
]

[project.scripts]
read_nexus = "pynxtools.nexus.nexus:main"
dataconverter = "pynxtools.dataconverter.convert:convert_cli"
nyaml2nxdl = "pynxtools.nyaml2nxdl.nyaml2nxdl:launch_tool"
generate_eln = "pynxtools.eln_mapper.eln_mapper:get_eln"

[tool.setuptools.package-data]
pynxtools = ["definitions/**/*.xml", "definitions/**/*.xsd"]
"pynxtools.dataconverter.readers.xps" = ["*.json"]
"pynxtools.dataconverter.readers.hall" = ["enum_map.json"]
"pynxtools.dataconverter.readers.rii_database.formula_parser" = ["dispersion_function_grammar.lark"]

[tool.setuptools.packages.find]
exclude = ["pynxtools/definitions*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
