[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
backend-path = ["src/pynxtools"]
build-backend = "_build_wrapper"

[project]
name = "pynxtools"
dynamic = ["version"]
authors = [
    { name = "The NOMAD Authors" },
]
description = "Extend NeXus for experiments and characterization in Materials Science and Materials Engineering and serve as a NOMAD parser implementation for NeXus."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=7.1.2",
    "click_default_group",
    "h5py>=3.6.0",
    "xarray>=0.20.2",
    "PyYAML>=6.0",
    "numpy>=1.21.2,<2.0.0",
    "pandas>=1.3.2",
    "ase>=3.19.0",
    "mergedeep",
    "importlib-metadata",
    "lxml>=4.9.1",
    "anytree",
    "setuptools>=64.0.1"
]

[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/pynxtools"
"Bug Tracker" = "https://github.com/FAIRmat-NFDI/pynxtools/issues"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-macros-plugin",
    "mkdocs-click",
]
dev = [
    "mypy",
    "ruff==0.3.4",
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "structlog",
    "types-pyyaml",
    "types-pytz",
    "types-requests",
    "uv",
    "pre-commit",
]
convert = [
    "pynxtools[apm,em,mpes,xps,stm,xrd,ellips]",
]
mpes = [
    "pynxtools-mpes",
]
apm = [
    "pynxtools-apm",
]
em = [
    "pynxtools-em",
]
stm = [
    "pynxtools-stm",
]
xps = [
    "pynxtools-xps",
]
xrd = [
    "pynxtools-xrd",
]
ellips = [
    "pynxtools-ellips",
]

[project.scripts]
read_nexus = "pynxtools.nexus.nexus:main"
dataconverter = "pynxtools.dataconverter.convert:main_cli"
generate_eln = "pynxtools.eln_mapper.eln_mapper:get_eln"

[tool.setuptools.package-data]
pynxtools = ["definitions/**/*.xml", "definitions/**/*.xsd"]
"pynxtools.dataconverter.readers.hall" = ["enum_map.json"]
"pynxtools.dataconverter.readers.rii_database.formula_parser" = ["dispersion_function_grammar.lark"]

[tool.setuptools.packages.find]
where = [
    "src",
]
exclude = ["src/pynxtools/definitions*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
exclude = ["src/pynxtools/definitions"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "W", # pycodestyle
    "PL", # pylint
]
ignore = [
    "E501", # Line too long ({width} > {limit} characters)
    "E701", # Multiple statements on one line (colon)
    "E731", # Do not assign a lambda expression, use a def
    "E402",  # Module level import not at top of file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used instead of constant
    "PLW0603", # Using the global statement
    "PLW2901", # redefined-loop-name
    "PLR1714", # consider-using-in
    "PLR5501", # else-if-used
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = false
ignore_missing_imports = true
follow_imports = "silent"
no_strict_optional = true
disable_error_code = "import, annotation-unchecked"
exclude = ["src/pynxtools/definitions/*"]
